# tg_sup_ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  INSTRUCTIONS.md  LICENSE  Makefile  README.md  README.mdgit  config.py  config_template.py  docker-compose.yml  main.py  profile.stats  profiling.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: анализ ошибки.agent.md  мониторинг ошибок.agent.md
.github/workflows/: ci.yml  profile.yml
handlers/: admin.py  callbacks.py  commands.py  common.py  documents.py  message_handler.py  text.py
prompts/: system.txt
services/: ai_service.py  code_executor.py  file_service.py  gemini_assistant.py  pipeline.py  profiler.py  sandbox_bootstrap.py
tests/: profile_sandbox_run.py  test_ai_service.py  test_code_executor.py  test_file_service.py  test_handlers_admin.py  test_handlers_callbacks.py  test_handlers_commands.py  test_handlers_common.py  test_handlers_documents.py  test_handlers_text.py  test_helpers.py
utils/: helpers.py  keyboards.py  profiler_decorator.py
