[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "BLE", # flake8-blind-except
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "S101",  # assert allowed in tests
    "N802",  # allow lowercase function names in non-public code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "N999"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B101"]
