[project]
name = "tg_sup_ai"
version = "1.0.0"
description = "Telegram AI Assistant for data processing (Excel, CSV, Word)"
requires-python = ">=3.12"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "BLE", # flake8-blind-except
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "S101",  # assert allowed in tests
    "N802",  # allow lowercase function names in non-public code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "N999"]
"handlers/*" = ["RUF001", "RUF002", "BLE001", "S110"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B101"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "tests/",
    ".venv/",
    "processed/",
    "downloads/",
]
